--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,6 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
-
             ],
             "scripts": []
           },
@@ -124,6 +123,10 @@
               "devServerTarget": "Inspired-Ai:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
